Money/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-34b26c36-1082-47b3-828a-90a41a7031e6
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-34b26c36-1082-47b3-828a-90a41a7031e6
  template:
    metadata:
      labels:
        app: springboot-app-34b26c36-1082-47b3-828a-90a41a7031e6
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-34b26c36-1082-47b3-828a-90a41a7031e6-graph:3.0.0
        ports:
        - containerPort: 8081
